Changed secret key

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ import createSecret
 
 DATABASE_URI = 'sqlite:///database.db'
 
-SECRET_KEY = sk
+SECRET_KEY = 'c2b0eefcb867f0acb488b76542f2716430380f7a0d865c98'
